plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.8'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}


group = 'com.example'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = '17.PREVIEW'
targetCompatibility = '17.PREVIEW'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

var incubatorArguments = ["--enable-preview","--add-modules", "jdk.incubator.vector"]

tasks.withType(AbstractCompile) { options.compilerArgs += incubatorArguments }


repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'


	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}


// enable java 17 preview
test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')

}




